--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import-normalize;
+
+:root {
+  --color-pri: #f07070;
+  --color-bkg-pri: #fffafa;
+  --color-bkg-sec: #555050;
+  --color-txt-pri: #151010;
+  --color-txt-sec: #ffffff;
+  --color-shd: rgba(0, 0, 0, 0.2);
+
+  --size-header-height: 64px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +18,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
