--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -17,9 +17,9 @@
   display: flex;
   justify-content: center;
 
-  min-height: calc(100vh - var(--size-header-height) - 32px - 32px);
+  min-height: calc(100vh - var(--size-header-height) - 64px - 128px);
 
-  padding: 32px 128px;
+  padding: 64px 64px 128px 64px;
 
   background-color: var(--color-bkg-pri);
 }
@@ -41,6 +41,6 @@
 
 @media only screen and (max-width: 600px) {
   .main {
-    padding: 32px 8px;
+    padding: 64px 8px 128px 8px;
   }
 }
