--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,32 @@
   --color-txt-pri: #151010;
   --color-txt-sec: #ffffff;
   --color-shd: rgba(0, 0, 0, 0.2);
+  --color-shd-dark: rgba(0, 0, 0, 0.5);
+  --color-lnk: #004acb;
+  --color-err: #f00000;
 
   --size-header-height: 64px;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  color: var(--color-lnk);
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
