--- a/src/components/Pool/Pool.module.css
+++ b/src/components/Pool/Pool.module.css
@@ -6,6 +6,7 @@
   background-color: var(--color-shd);
   border: 1px solid var(--color-shd);
   border-radius: 4px;
+  box-shadow: var(--box-shadow-inside);
 }
 
 .container > :not(:first-child) {
