--- a/src/components/WishItem/WishItem.module.css
+++ b/src/components/WishItem/WishItem.module.css
@@ -7,19 +7,41 @@
   background-color: var(--color-bkg-pri);
   border: 1px solid var(--color-shd);
   border-radius: 4px;
+  box-shadow: var(--box-shadow-outside);
+
+  cursor: pointer;
+
+  transition: var(--transition-elevate);
+}
+
+.container:hover {
+  box-shadow: var(--box-shadow-outside--elevated);
 }
 
 .container > :not(:first-child) {
-  margin-left: 16px;
+  margin-left: 24px;
+}
+
+.grayscale {
+  filter: grayscale(100%) brightness(75%);
+  box-shadow: none;
 }
 
 .icon {
   height: 64px;
   width: 64px;
+
+  user-select: none;
 }
 
 .textContainer {
   flex: 1;
+}
+
+.textContainer > :not(:first-child) {
+  display: block;
+
+  margin-top: 4px;
 }
 
 .title {
