--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -15,13 +15,18 @@
 
 .main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
   min-height: calc(100vh - var(--size-header-height) - 64px - 128px);
 
-  padding: 64px 64px 128px 64px;
+  padding: 32px 64px 128px 64px;
 
   background-color: var(--color-bkg-pri);
+}
+
+.description {
+  margin-bottom: 32px;
 }
 
 .footer {
@@ -41,6 +46,6 @@
 
 @media only screen and (max-width: 600px) {
   .main {
-    padding: 64px 8px 128px 8px;
+    padding: 32px 8px 128px 8px;
   }
 }
