--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -10,7 +10,7 @@
   background-color: var(--color-pri);
   border-bottom: 1px solid var(--color-shd);
 
-  white-space: nowrap;
+  font-size: 80%;
 }
 
 .main {
@@ -20,7 +20,7 @@
 
   min-height: calc(100vh - var(--size-header-height) - 64px - 128px);
 
-  padding: 32px 64px 128px 64px;
+  padding: 16px 64px 128px 64px;
 
   background-color: var(--color-bkg-pri);
 }
@@ -46,6 +46,7 @@
 
 @media only screen and (max-width: 600px) {
   .main {
-    padding: 32px 8px 128px 8px;
+    padding-right: 8px;
+    padding-left: 8px;
   }
 }
