--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,12 @@
 
   --size-header-height: 96px;
 
-  --box-shadow-inside: inset 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    inset 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    inset 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  --box-shadow-outside: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  --box-shadow-outside--elevated: 0 0 8px 0 rgba(0, 0, 0, 0.08),
-    0 0 15px 0 rgba(0, 0, 0, 0.02), 0 0 20px 4px rgba(0, 0, 0, 0.06);
+  --box-shadow-inside: inset 0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    inset 0 1px 1px 0 rgba(0, 0, 0, 0.14), inset 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  --box-shadow-outside: 0 1px 1px 1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px 1px rgba(0, 0, 0, 0.12);
+  --box-shadow-outside--elevated: 0 0 6px 0 rgba(0, 0, 0, 0.3),
+    0 0 8px 0 rgba(0, 0, 0, 0.08), 0 0 9px 3px rgba(0, 0, 0, 0.12);
 
   --transition-elevate: box-shadow 150ms linear;
 }
