--- a/src/containers/pages/App/App.module.css
+++ b/src/containers/pages/App/App.module.css
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 
   height: calc(var(--size-header-height));
@@ -13,16 +14,20 @@
   font-size: 80%;
 }
 
+.mainContare {
+  background-color: var(--color-bkg-pri);
+}
+
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  min-height: calc(100vh - var(--size-header-height) - 128px);
+  min-height: calc(
+    100vh - var(--size-header-height) - 128px - var(--space-medium)
+  );
 
   padding: 16px 64px 128px 64px;
-
-  background-color: var(--color-bkg-pri);
 }
 
 .footer {
