--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,14 @@
   --color-lnk: #004acb;
   --color-lnk-bkg: rgba(20, 20, 80, 0.1);
   --color-lnk-bkg--hov: rgba(20, 20, 80, 0.05);
+  --color-ok: #50b020;
   --color-err: #f00000;
   --color-adm: #d05042;
 
   /* Sizes */
   --size-header-height: 96px;
+  --size-font: 16px;
+  --size-line-height: 24px;
 
   /* Shadows */
   --box-shadow-inside: inset 0 2px 1px -1px rgba(0, 0, 0, 0.2),
@@ -41,11 +44,15 @@
 
 body {
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: var(--size-font);
+  line-height: var(--size-line-height);
+
   overflow-y: scroll;
 }
 
@@ -65,4 +72,8 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+
+p {
+  margin-top: 0;
 }
