--- a/src/components/domain/WishItem/WishItem.module.css
+++ b/src/components/domain/WishItem/WishItem.module.css
@@ -44,17 +44,13 @@
 .textContainer {
   flex: 1;
 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
   width: calc(100% - 24px);
 
   margin-left: 24px;
-}
-
-.textContainer > :not(:first-child) {
-  display: block;
-
-  width: fit-content;
-
-  margin-top: 4px;
 }
 
 .title {
