--- a/src/containers/pages/App/App.module.css
+++ b/src/containers/pages/App/App.module.css
@@ -14,16 +14,13 @@
   font-size: 80%;
 }
 
-.mainContainer {
-}
-
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
 
   min-height: calc(
-    100vh - var(--size-header-height) - 128px - var(--space-medium)
+    100vh - var(--size-header-height) - var(--size-footer-height)
   );
 
   padding: 16px 64px 128px 64px;
@@ -33,18 +30,23 @@
 
 .footer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 
-  height: 128px;
+  height: var(--size-footer-height);
 
-  padding: 0 16px;
+  padding: 16px;
 
   color: var(--color-txt-sec);
   background-color: var(--color-bkg-sec);
   border-top: 1px solid var(--color-shd);
 
   white-space: nowrap;
+}
+
+.footer > * {
+  margin: 0 8px;
 }
 
 .contactEmail {
