--- a/src/containers/pages/App/App.module.css
+++ b/src/containers/pages/App/App.module.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 
-  height: calc(var(--size-header-height));
+  min-height: calc(var(--size-header-height));
 
   padding: 0 16px;
 
