--- a/src/components/domain/WishItem/WishItem.module.css
+++ b/src/components/domain/WishItem/WishItem.module.css
@@ -4,7 +4,7 @@
 
   padding: 8px 16px;
 
-  background-color: var(--color-bkg-pri);
+  background-color: var(--color-bkg-notification);
   border: 1px solid var(--color-shd);
   border-radius: 4px;
   box-shadow: var(--box-shadow-outside);
@@ -53,13 +53,8 @@
   margin-left: 24px;
 }
 
-.title {
-  font-size: 24px;
-}
-
 .description {
-  font-size: 18px;
-  font-weight: normal;
+  font-size: 80%;
 }
 
 @media only screen and (max-width: 600px) {
