--- a/src/containers/pages/App/App.module.css
+++ b/src/containers/pages/App/App.module.css
@@ -1,6 +1,5 @@
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 
@@ -8,11 +7,22 @@
 
   padding: 0 16px;
 
-  color: var(--color-txt-sec);
+  color: #426983;
   background-color: var(--color-pri);
   border-bottom: 1px solid var(--color-shd);
+}
 
-  font-size: 80%;
+.headerImgContainer {
+  flex-grow: 1;
+
+  display: flex;
+  justify-content: center;
+
+  max-width: 500px;
+}
+
+.headerImg {
+  width: 320px;
 }
 
 .main {
@@ -35,7 +45,7 @@
   justify-content: space-between;
   align-items: center;
 
-  height: var(--size-footer-height);
+  min-height: var(--size-footer-height);
 
   padding: 16px;
 
@@ -43,11 +53,15 @@
   background-color: var(--color-bkg-sec);
   border-top: 1px solid var(--color-shd);
 
-  white-space: nowrap;
 }
 
 .footer > * {
-  margin: 0 8px;
+  margin: 16px 4px;
+
+  font-family: "WeddingFont", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  font-size: 130%;
 }
 
 .contactEmail {
