--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 @import-normalize;
 
 @import "./styles/common.css";
+@import "./styles/fonts.css";
 
 :root {
   /* Colors */
-  --color-pri: #f07070;
-  --color-bkg-pri: #fffafa;
+  --color-pri: #ffffff;
+  --color-bkg-pri: #fafaff;
   --color-bkg-pri--hov: #efeaea;
   --color-bkg-sec: #555050;
   --color-bkg-notification: #ffffff;
   --color-brd-pri: #555050;
   --color-brd-pri--foc: #7777ff;
   --color-brd-sec: #fffafa;
-  --color-txt-pri: #151010;
+  --color-txt-pri: #426983;
   --color-txt-sec: #ffffff;
   --color-shd: rgba(0, 0, 0, 0.2);
   --color-shd-dark: rgba(0, 0, 0, 0.5);
@@ -27,10 +28,10 @@
   --color-adm: #d05042;
 
   /* Sizes */
-  --size-header-height: 96px;
+  --size-header-height: 128px;
   --size-footer-height: 128px;
-  --size-font: 16px;
-  --size-line-height: 24px;
+  --size-font: 22px;
+  --size-line-height: 26px;
 
   /* Shadows */
   --box-shadow-inside: inset 0 2px 1px -1px rgba(0, 0, 0, 0.2),
@@ -57,6 +58,8 @@
 body {
   margin: 0;
 
+  color: var(--color-txt-pri);
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -76,7 +79,15 @@ h5,
 h6 {
   margin: 0;
 
-  line-height: 140%;
+  line-height: 110%;
+
+  font-family: "WeddingFont", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-size: 2.2em;
 }
 
 p {
