--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -5,6 +5,7 @@
 
   padding: 6px 10px;
 
+  color: var(--color-txt-pri);
   background-color: var(--color-bkg-pri);
   border: 2px solid var(--color-brd-pri);
   border-radius: 4px;
@@ -29,6 +30,7 @@
 
   color: var(--color-lnk);
 
+  font-size: 70%;
   text-decoration: none;
 }
 
